--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/new_reminders"
-        android:orderInCategory="100" android:showAsAction="ifRoom"
-        android:actionMenuTextColor="#83b51e"
-        />
+
+    <item android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        android:orderInCategory="100"
+        android:showAsAction="never" />
+
+    <item android:id="@+id/add_reminder"
+        android:icon="@drawable/pic7"
+        android:showAsAction="ifRoom"
+        android:title="Add Reminder"/>/>
+
+
+
 </menu>
