Fragment layout debuged Archie: 12/9/2014 11:10

--- a/app/src/main/res/layout/reminder_new.xml
+++ b/app/src/main/res/layout/reminder_new.xml
@@ -82,7 +82,7 @@
 
         <fragment
             android:id="@+id/main_frag"
-            android:name="com.anrlabs.reminders.TimeFragment"
+            android:name="com.anrlabs.reminders.PlainFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"/>
