--- a/app/src/main/res/layout/time_fragment.xml
+++ b/app/src/main/res/layout/time_fragment.xml
@@ -2,14 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#fedcba">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <DatePicker
+        android:id="@+id/dateRemember"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Time Layout Test"
-        android:id="@+id/timeTest" />
+        android:calendarViewShown="false"
+        android:layout_weight="1"/>
+
+    <TimePicker
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/timeRemeber"
+        android:accessibilityLiveRegion="assertive"
+        android:layout_weight="1"/>
 
 </LinearLayout>
