Database fix Michael & Archie: 12/9/2014 15:17

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,7 +9,7 @@
     <item android:id="@+id/add_reminder"
         android:icon="@drawable/pic7"
         android:showAsAction="ifRoom"
-        android:title="Add Reminder"/>/>
+        android:title="Add Reminder"/>
 
 
 
