--- a/app/src/main/res/layout/time_fragment.xml
+++ b/app/src/main/res/layout/time_fragment.xml
@@ -9,6 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:calendarViewShown="false"
+        android:requiresFadingEdge="horizontal"
+        android:accessibilityLiveRegion="polite"
         android:layout_weight="1"/>
 
     <TimePicker
@@ -16,6 +18,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/timeRemeber"
         android:accessibilityLiveRegion="assertive"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:soundEffectsEnabled="true"
+        android:requiresFadingEdge="none"
+        android:clickable="true" />
 
 </LinearLayout>
