--- a/app/src/main/res/layout/reminder_new.xml
+++ b/app/src/main/res/layout/reminder_new.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/linear"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -77,6 +78,7 @@
                 android:id="@+id/locationFrag"
                 android:layout_weight="2"
                 android:onClick="selectFrag"/>
+                <!--android:id="@+id/locationFrag"/-->
 
         </LinearLayout>
 
@@ -87,15 +89,25 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"/>
 
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cancel"
+                android:id="@+id/cancelButton"
+                android:layout_weight="0"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentBottom="true"
+                android:onClick="cancelSaveData"/>
+        </fragment>
+
     </LinearLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cancel"
-        android:id="@+id/cancelButton"
-        android:layout_weight="0"
-        android:layout_gravity="center"
-        android:onClick="cancelSaveData"/>
+
 
 </LinearLayout>
