--- a/app/src/main/res/layout/location_frag.xml
+++ b/app/src/main/res/layout/location_frag.xml
@@ -6,7 +6,11 @@
     android:background="#123456">
 
 
-    
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"/>
 
 
 </LinearLayout>
