--- a/app/src/main/res/layout/location_frag.xml
+++ b/app/src/main/res/layout/location_frag.xml
@@ -6,11 +6,12 @@
     android:background="#123456">
 
 
-    <fragment
+    <com.google.android.gms.maps.MapView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"/>
+        android:clickable="true"
+        android:apiKey="AIzaSyAS3cXW1YbSyJaawhq9hF18_qL81gCxuKA"/>
 
 
 </LinearLayout>
