--- a/app/src/main/res/layout/reminder_new.xml
+++ b/app/src/main/res/layout/reminder_new.xml
@@ -86,18 +86,18 @@
             android:id="@+id/main_frag"
             android:name="com.anrlabs.reminders.PlainFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="2"/>
+
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cancel"
+            android:text="Save"
             android:id="@+id/cancelButton"
             android:layout_weight="0"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"
-            android:onClick="cancelSaveData"/>
+            android:layout_gravity="center"
+            android:onClick="saveData"/>
 
 
 
