--- a/app/src/main/res/layout/reminder_new.xml
+++ b/app/src/main/res/layout/reminder_new.xml
@@ -67,7 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time"
-                android:id="@+id/timeFrag"
+                android:id="@+id/buttonTimeFrag"
                 android:layout_weight="2"
                 android:onClick="selectFrag"/>
 
@@ -75,19 +75,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Location"
-                android:id="@+id/locationFrag"
+                android:id="@+id/buttonLocationFrag"
                 android:layout_weight="2"
                 android:onClick="selectFrag"/>
                 <!--android:id="@+id/locationFrag"/-->
 
         </LinearLayout>
-
-        <fragment
+        <FrameLayout
             android:id="@+id/main_frag"
-            android:name="com.anrlabs.reminders.PlainFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="2"/>
+            android:layout_below="@id/buttonTimeFrag"
+            android:layout_width="fill_parent"
+            android:layout_height="250dp"/>
+
 
 
         <Button
