--- a/app/src/main/res/layout/reminder_new.xml
+++ b/app/src/main/res/layout/reminder_new.xml
@@ -81,12 +81,14 @@
                 <!--android:id="@+id/locationFrag"/-->
 
         </LinearLayout>
+
+
         <FrameLayout
             android:id="@+id/main_frag"
             android:layout_below="@id/buttonTimeFrag"
             android:layout_width="fill_parent"
-            android:layout_height="250dp"/>
-
+            android:layout_height="250dp"
+            android:layout_weight="2"/>
 
 
         <Button
