--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:textColor="#0099cc"
+        android:textColor="#FFCC00"
         android:text="Date"
         android:id="@+id/date"
         android:gravity="center" />
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:textColor="#0099cc"
+        android:textColor="#FFCC00"
         android:text="Time"
         android:id="@+id/time"
         android:gravity="top" />
@@ -41,7 +41,7 @@
     <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:textColor="#0099cc"
+         android:textColor="#000000"
          android:layout_marginLeft="5dp"
          android:text="Title"
          android:id="@+id/title" />
