--- a/app/src/main/res/layout/location_frag.xml
+++ b/app/src/main/res/layout/location_frag.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="300dp">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/topButtons"
@@ -12,19 +12,19 @@
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/address"
-            android:textSize="10sp"
+            android:textSize="15dp"
             android:hint="Address here"
             android:layout_weight="2"/>
 
         <EditText
-            android:layout_width="65dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/radius"
-            android:textSize="10sp"
+            android:textSize="15dp"
             android:inputType="number"
             android:hint="Radius"
             android:layout_weight="0"/>
@@ -32,9 +32,9 @@
         <Button
             android:id="@+id/buttonShow"
             android:layout_width="wrap_content"
-            android:layout_height="30dip"
+            android:layout_height="match_parent"
             android:text="Locate"
-            android:textSize="10sp"
+            android:textSize="15dp"
             android:layout_alignParentRight="true"
             android:layout_weight="0"/>
     </LinearLayout>
