--- a/app/src/main/res/layout/reminder_new.xml
+++ b/app/src/main/res/layout/reminder_new.xml
@@ -16,15 +16,16 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="TODO:"
-            android:textSize="12sp"
+            android:text="TO-DO:"
+            android:textSize="15dp"
             android:id="@+id/titleView"
             android:layout_gravity="center_horizontal"/>
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="12sp"
+            android:textSize="15dp"
+            android:hint="Enter Title of Activity"
             android:id="@+id/titleBox" />
 
     </LinearLayout>
@@ -41,7 +42,7 @@
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="NOTES:"
-            android:textSize="12sp"
+            android:textSize="15dp"
             android:id="@+id/memoView"
             android:layout_gravity="center_horizontal"/>
 
@@ -49,7 +50,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="textMultiLine"
-            android:textSize="12sp"
+            android:textSize="15dp"
+            android:hint="Details of Activity"
             android:id="@+id/memoBox" />
 
     </LinearLayout>
@@ -71,8 +73,8 @@
 
                 <Button
                     android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:textSize="10sp"
+                    android:layout_height="wrap_content"
+                    android:textSize="15dp"
                     android:text="Time"
                     android:id="@+id/buttonTimeFrag"
                     android:layout_alignParentLeft="true"
@@ -81,8 +83,8 @@
 
                 <Button
                     android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:textSize="10sp"
+                    android:layout_height="wrap_content"
+                    android:textSize="15dp"
                     android:text="Location"
                     android:layout_alignParentRight="true"
                     android:id="@+id/buttonLocationFrag"
@@ -107,8 +109,8 @@
         android:layout_width="fill_parent"
         android:layout_alignParentBottom="true"
         android:text="ADD"
-        android:layout_height="30dp"
-        android:textSize="10sp"
+        android:layout_height="wrap_content"
+        android:textSize="15dp"
         android:gravity="center"
         android:id="@+id/cancelButton"
         android:layout_weight="0"
