--- a/app/src/main/res/layout/time_fragment.xml
+++ b/app/src/main/res/layout/time_fragment.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="300dp">
+    android:layout_height="match_parent">
 
     <DatePicker
         android:id="@+id/dateRemember"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:calendarViewShown="false"
-        android:requiresFadingEdge="horizontal"
+        android:maxDate="2100"
+        android:startYear="2000"
         android:accessibilityLiveRegion="polite"
         android:layout_weight="1"/>
 
@@ -17,7 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/timeRemeber"
-        android:layout_weight="1"
-        android:clickable="true" />
+        android:layout_weight="1"/>
 
 </LinearLayout>
