--- a/app/src/main/res/layout/location_frag.xml
+++ b/app/src/main/res/layout/location_frag.xml
@@ -26,7 +26,7 @@
             android:id="@+id/radius"
             android:textSize="15dp"
             android:inputType="number"
-            android:hint="Radius"
+            android:hint="Radius/Meters"
             android:layout_weight="0"/>
 
         <Button
