--- a/app/src/main/res/layout/reminder_new.xml
+++ b/app/src/main/res/layout/reminder_new.xml
@@ -99,8 +99,15 @@
             android:layout_below="@id/buttonTimeFrag"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="2"
-            />
+            android:layout_weight="2">
+
+        <SeekBar
+            android:id="@+id/volbar"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10px"/>
+
+            </FrameLayout>
 
     </LinearLayout>
 
