--- a/app/src/main/res/layout/activity_show_reminder.xml
+++ b/app/src/main/res/layout/activity_show_reminder.xml
@@ -11,36 +11,47 @@
         android:text="@string/TODO"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textStyle="bold"
-        android:textColor="#0099cc"
+
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"/>
     <TextView android:text="@string/blank"
         android:id="@+id/TV_TODO_value"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/TV_TODO"/>
+    <View
+        android:layout_below="@id/TV_TODO"
+        android:background="@android:color/darker_gray"
+        android:layout_height="2dp"
+        android:layout_width="match_parent"
+        />
     <TextView
         android:text="@string/Notes"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textStyle="bold"
-        android:textColor="#0099cc"
+
         android:id="@+id/TV_Notes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/TV_TODO"/>
     <TextView android:text="@string/blank"
         android:id="@+id/TV_NotesValue"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/TV_TODO_value"
         android:layout_toRightOf="@id/TV_TODO"/>
+    <View
+        android:layout_below="@id/TV_Notes"
+        android:background="@android:color/darker_gray"
+        android:layout_height="2dp"
+        android:layout_width="match_parent"
+        />
     <TextView android:text="@string/Time"
-        android:textColor="#0099cc"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textStyle="bold"
         android:id="@+id/TV_Times"
         android:layout_width="wrap_content"
@@ -48,16 +59,21 @@
         android:layout_below="@id/TV_Notes"/>
     <TextView android:text="@string/blank"
         android:id="@+id/TV_Time_Value"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/TV_NotesValue"
         android:layout_toRightOf="@id/TV_Times"/>
+    <View
+        android:layout_below="@id/TV_Times"
+        android:background="@android:color/darker_gray"
+        android:layout_height="2dp"
+        android:layout_width="match_parent"
+        />
     <TextView
         android:text="@string/Location"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textStyle="bold"
-        android:textColor="#0099cc"
         android:id="@+id/TV_Location"
         android:layout_width="wrap_content"
         android:layout_height="60dip"
@@ -66,13 +82,19 @@
     <TextView
         android:text="@string/blank"
         android:id="@+id/TV_Location_Value"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:layout_width="wrap_content"
         android:layout_height="60dip"
         android:layout_below="@id/TV_Time_Value"
         android:layout_toRightOf="@id/TV_Location"
 
         android:singleLine="false"/>
+    <View
+        android:layout_below="@id/TV_Location"
+        android:background="@android:color/darker_gray"
+        android:layout_height="2dp"
+        android:layout_width="match_parent"
+        />
     <fragment
 
         android:id="@+id/map_view"
