--- a/app/src/main/res/layout/location_frag.xml
+++ b/app/src/main/res/layout/location_frag.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,14 +10,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <EditText
+        <AutoCompleteTextView android:id="@+id/address"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:maxLines="1"
+            android:layout_weight="1"
+            android:hint="Type address here"
+            android:completionThreshold="1"/>
+            <!--android:layout_marginLeft="5dp"/-->
+
+        <!--EditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/address"
             android:textSize="15dp"
             android:hint="Address here"
-            android:layout_weight="2"/>
+            android:layout_weight="2"/-->
 
         <EditText
             android:layout_width="wrap_content"
@@ -25,6 +34,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/radius"
             android:textSize="15dp"
+            android:maxLines="1"
             android:inputType="number"
             android:hint="Radius/Meters"
             android:layout_weight="0"/>
@@ -46,4 +56,4 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/topButtons"/>
 
-</RelativeLayout>
+</LinearLayout>
