--- a/app/src/main/res/layout/reminder_new.xml
+++ b/app/src/main/res/layout/reminder_new.xml
@@ -99,8 +99,7 @@
             android:layout_below="@id/buttonTimeFrag"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="2"
-            />
+            android:layout_weight="2"/>
 
     </LinearLayout>
 
